fixed alignment

--- a/src/components/About/Resume/Experience/Experience.scss
+++ b/src/components/About/Resume/Experience/Experience.scss
@@ -12,7 +12,7 @@
     flex-direction: column;
     padding: 0 1rem;
     justify-content: center;
-    align-items: center;
+    align-items: flex-start;
     h3 {
       font-family: var(--atlas);
       font-size: 1.5rem;
